1. Реализация профессий в коде[#6837]

--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,6 @@
     </dependencies>
     <modules>
         <module>chapter_001</module>
+		<module>chapter_002</module>
     </modules>
 </project>
